change project name
change project name from 242 to alogrithm

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ Source/LeeCode/.vs/LeeCode/v14/.suo
 *.db
 Source/LeeCode/.vs/LeeCode/v14/.suo
 *.db
+Source/LeeCode/.vs/LeeCode/v14/.suo
+*.db
+Source/LeeCode/LeeCode.VC.db
+*.suo
+*.db
