--- a/Source/LeeCode/Alogrithm/Alogrithm.vcxproj
+++ b/Source/LeeCode/Alogrithm/Alogrithm.vcxproj
@@ -144,6 +144,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="242_Valid_Anagram.h" />
+    <ClInclude Include="349_Intersection_of_Two_Arrays.h" />
     <ClInclude Include="Alogrithm.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
