--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ Source/LeeCode/Alogrithm/Debug/main.obj
 *.obj
 *.db
 Source/LeeCode/LeeCode.VC.db
+Source/LeeCode/LeeCode.VC.db
+*.db
+Source/LeeCode/LeeCode.VC.db
