--- a/Source/LeeCode/Alogrithm/Alogrithm.vcxproj
+++ b/Source/LeeCode/Alogrithm/Alogrithm.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClInclude Include="242_Valid_Anagram.h" />
     <ClInclude Include="349_Intersection_of_Two_Arrays.h" />
+    <ClInclude Include="350_Intersection_of_Two_Arrays_II.h" />
     <ClInclude Include="Alogrithm.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
