1st submit for 274 h-index
1st submit for 274 h-index

--- a/Source/LeeCode/Alogrithm/Alogrithm.vcxproj
+++ b/Source/LeeCode/Alogrithm/Alogrithm.vcxproj
@@ -144,6 +144,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="242_Valid_Anagram.h" />
+    <ClInclude Include="274_h-index.h" />
     <ClInclude Include="349_Intersection_of_Two_Arrays.h" />
     <ClInclude Include="350_Intersection_of_Two_Arrays_II.h" />
     <ClInclude Include="Alogrithm.h" />
