--- a/Source/LeeCode/Alogrithm/Alogrithm.vcxproj.filters
+++ b/Source/LeeCode/Alogrithm/Alogrithm.vcxproj.filters
@@ -17,6 +17,9 @@
     <ClInclude Include="350_Intersection_of_Two_Arrays_II.h">
       <Filter>Alogrithm</Filter>
     </ClInclude>
+    <ClInclude Include="274_h-index.h">
+      <Filter>Alogrithm</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Alogrithm">
