1st submittion of 179_lagestnumber
1st submittion of 179_lagestnumber, very low performance

--- a/Source/LeeCode/Alogrithm/Alogrithm.vcxproj
+++ b/Source/LeeCode/Alogrithm/Alogrithm.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="179_LargestNumber.h" />
     <ClInclude Include="242_Valid_Anagram.h" />
     <ClInclude Include="274_h-index.h" />
     <ClInclude Include="349_Intersection_of_Two_Arrays.h" />
